--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
